# workshop-python-aula19

./: .dockerignore  README.md  database.py  hello.py  main_exemplo.py  pyproject.toml  pyproject.toml.old  requirements.txt  schema.py  test.db
src/: Dockerfile
